Começando correção de erro na alteração de causas

--- a/FrontEnd/mindsafe/src/app/pagina-nao-encontrada/pagina-nao-encontrada/pagina-nao-encontrada.component.html
+++ b/FrontEnd/mindsafe/src/app/pagina-nao-encontrada/pagina-nao-encontrada/pagina-nao-encontrada.component.html
@@ -4,7 +4,7 @@
   <h2 [ngStyle.xs]="{'font-size': '20pt'}" class="w3-center w3-animate-left">PÁGINA NÃO ENCONTRADA OU EM MANUTENÇÃO</h2>
 
   <div id="img-erro" fxFlex>
-    <img id="img" src="../../../assets/imagens/404-error.svg" class="w3-animate-zoom" [ngStyle.xs]="{'width': '60%'}" [ngStyle.sm]="{'width': '40%'}" [ngStyle.md]="{'width': '30%'}">
+    <img src="../../../assets/imagens/404-error.svg" class="w3-animate-zoom" [ngStyle.xs]="{'width': '60%'}" [ngStyle.sm]="{'width': '40%'}" [ngStyle.md]="{'width': '30%'}">
     <p id="licensa">
       Icons made by
       <a href="https://www.flaticon.com/authors/flat-icons" target="blank" title="Flat Icons">Flat Icons</a>
