--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes-form-modal/pacientes-form.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes-form-modal/pacientes-form.component.html
@@ -28,7 +28,7 @@
           </mat-slide-toggle>
         </div>
 
-        <div fxLayout="row" fxLayoutGap="10px">
+        <div fxLayout="row" fxLayoutGap="15px">
           <mat-form-field fxFlex>
             <input matInput placeholder="Nome Completo" formControlName="nome" #nome>
             <mat-hint align="end">{{ nome.value?.length }} / 255</mat-hint>
@@ -38,7 +38,7 @@
           </mat-form-field>
         </div>
 
-        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutGap="10px">
+        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutGap="15px">
           <mat-form-field fxFlex>
             <input [textMask]="{
               mask: tipoPessoa == 'cpf' ? maskCpf : maskCnpj,
@@ -58,7 +58,14 @@
 
           <mat-form-field fxFlex>
             <mat-select formControlName="nacionalidade" placeholder="Nacionalidade">
-              <mat-option *ngFor="let pais of paises$ | async" [value]="pais.sigla">{{ pais.nomePais }}</mat-option>
+              <mat-option *ngFor="let pais of paises$ | async" [value]="pais.sigla">
+                <span style="position: relative; float: left;">
+                  <strong>{{ pais.sigla }}</strong>
+                </span>
+                <span style="position: relative; float: right;">
+                  {{ pais.nomePais }}
+                </span>
+              </mat-option>
             </mat-select>
             <mat-error>
               {{ retornarValidacoes('nacionalidade', formPaciente.get('nacionalidade')) }}
@@ -66,7 +73,7 @@
           </mat-form-field>
         </div>
 
-        <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
+        <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="15px">
           <mat-form-field fxFlex>
             <mat-select placeholder="Sexo" formControlName="sexo">
               <mat-option value="M">Masculino</mat-option>
@@ -100,7 +107,7 @@
       <form [formGroup]="formPaciente">
         <ng-template matStepLabel>Informações Complementares</ng-template>
 
-        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutGap="10px">
+        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutGap="15px">
           <mat-form-field fxFlex>
             <input matInput formControlName="celular" type="tel" placeholder="Celular" [textMask]="{
               mask: maskCel,
@@ -144,7 +151,7 @@
                 </mat-panel-description>
               </mat-expansion-panel-header>
 
-              <div fxLayout="column" fxLayoutGap="10px">
+              <div fxLayout="column" fxLayoutGap="15px">
                 <mat-form-field fxFlex>
                   <mat-select [(ngModel)]="medicamentoSelecionado" [ngModelOptions]="{standalone: true}"
                     placeholder="Medicamento">
@@ -214,7 +221,7 @@
       <form [formGroup]="formPaciente">
         <ng-template matStepLabel>Finalizar</ng-template>
 
-        <div fxLayout="row" fxLayoutGap="10px">
+        <div fxLayout="row" fxLayoutGap="15px">
           <mat-card fxFlex>
             <mat-card-header class="card-header">
               <mat-card-title class="material-icons">person</mat-card-title>
@@ -249,7 +256,7 @@
 
               <mat-divider inset></mat-divider>
 
-              <mat-card class="card-info">
+              <mat-card class="card-info" *ngIf="medicamentosAdicionados?.length > 0">
                 <mat-card-title>
                   Medicamentos
                 </mat-card-title>
@@ -263,7 +270,7 @@
                 </mat-card-content>
               </mat-card>
 
-              <mat-card class="card-info">
+              <mat-card class="card-info" *ngIf="selectedCausas?.length > 0">
                 <mat-card-title>
                   Causas
                 </mat-card-title>
@@ -280,9 +287,9 @@
           </mat-card>
         </div>
 
-        <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" style="margin-top: 20px;">
+        <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="15px" style="margin-top: 20px;">
           <button mat-raised-button color="warn" (click)="onClose()" fxFlex>
-            Cancelar
+            CANCELAR
             <mat-icon class="material-icons">cancel</mat-icon>
           </button>
           <button mat-raised-button color="primary" (click)="onConfirm()" [disabled]="formPaciente.invalid" fxFlex>
