--- a/FrontEnd/mindsafe/src/app/pagina-nao-encontrada/pagina-nao-encontrada/pagina-nao-encontrada.component.scss
+++ b/FrontEnd/mindsafe/src/app/pagina-nao-encontrada/pagina-nao-encontrada/pagina-nao-encontrada.component.scss
@@ -1,5 +1,19 @@
 @import 'https://www.w3schools.com/w3css/4/w3.css';
 
+@keyframes opacitybutton {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.8;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 h1 {
   margin-top: 2px;
   text-align: center;
@@ -50,4 +64,7 @@ button {
   font-size: 13pt;
   margin: 0px auto 10px;
   width: auto;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-name: opacitybutton;
 }
