Alteração na tela de pacientes-form, espaço entre campos, validação de cpfCnpj, correção de erros em causas e medicamentos

--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes-form-modal/pacientes-form.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes-form-modal/pacientes-form.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <mat-dialog-content>
-  <mat-horizontal-stepper [linear]="paciente?.idPessoa === null" labelPosition="bottom" #stepper>
+  <mat-horizontal-stepper [linear]="paciente?.idPessoa === null || formPaciente.get('cpfCnpj').invalid" labelPosition="bottom" #stepper>
     <!-- Step Inicial -->
     <mat-step [stepControl]="formPaciente">
       <form [formGroup]="formPaciente">
@@ -38,12 +38,12 @@
           </mat-form-field>
         </div>
 
-        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutGap="15px">
+        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutGap="10px" style="margin: 10px 0px;">
           <mat-form-field fxFlex>
             <input [textMask]="{
               mask: tipoPessoa == 'cpf' ? maskCpf : maskCnpj,
               guide: false
-            }" matInput [placeholder]="tipoPessoa.toUpperCase()" (change)="validarCpfCnpj(cpfCnpj)" formControlName="cpfCnpj" #cpfCnpj>
+            }" matInput [placeholder]="tipoPessoa.toUpperCase()" (click)="validarCpfCnpj()" formControlName="cpfCnpj" #cpfCnpj>
             <mat-error>
               {{ retornarValidacoes(tipoPessoa.toUpperCase(), formPaciente.get('cpfCnpj')) }}
             </mat-error>
@@ -288,7 +288,7 @@
         </div>
 
         <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="15px" style="margin-top: 20px;">
-          <button mat-raised-button color="warn" (click)="onClose()" fxFlex>
+          <button mat-raised-button color="warn" matDialogClose fxFlex>
             CANCELAR
             <mat-icon class="material-icons">cancel</mat-icon>
           </button>
