--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
@@ -53,37 +53,42 @@
 
     <ng-container matColumnDef="idPessoa">
       <th mat-header-cell *matHeaderCellDef> Código </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.idPessoa}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{ paciente.idPessoa }} </td>
     </ng-container>
 
     <ng-container matColumnDef="nome">
       <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.nome}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{ paciente.nome }} </td>
     </ng-container>
 
     <ng-container matColumnDef="familia">
       <th mat-header-cell *matHeaderCellDef> Família </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.familia.nome}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{ paciente.familia.nome }} </td>
     </ng-container>
 
     <ng-container matColumnDef="cpfCnpj">
       <th mat-header-cell *matHeaderCellDef> CPF/CNPJ </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.cpfCnpj}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{ paciente.cpfCnpj }} </td>
     </ng-container>
 
     <ng-container matColumnDef="responsavelFamiliar">
       <th mat-header-cell *matHeaderCellDef> Responsável Familiar </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.responsavelFamiliar ? 'Sim' : 'Não'}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{ paciente.responsavelFamiliar ? 'Sim' : 'Não' }} </td>
     </ng-container>
 
     <ng-container matColumnDef="dataNascimento">
       <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.dataNascimento | date:'shortDate'}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{ paciente.dataNascimento | date:'shortDate' }} </td>
     </ng-container>
 
     <ng-container matColumnDef="nacionalidade">
       <th mat-header-cell *matHeaderCellDef> Nacionalidade </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.nacionalidade}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{ paciente.nacionalidade }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="sexo">
+      <th mat-header-cell *matHeaderCellDef> Sexo </th>
+      <td mat-cell *matCellDef="let paciente"> {{ paciente.sexo === 'M' ? 'Masculino' : 'Feminino' }} </td>
     </ng-container>
 
     <ng-container matColumnDef="select">
