--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.scss
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.scss
@@ -15,7 +15,7 @@
 }
 
 .logo {
-  background-image: url('../../../assets/logo-tcc.png');
+  background-image: url('../../../assets/imagens/logo-tcc.png');
   background-size: cover;
   width: 40px;
   height: 35px;
