--- a/FrontEnd/mindsafe/src/app/login/login/login.component.scss
+++ b/FrontEnd/mindsafe/src/app/login/login/login.component.scss
@@ -5,7 +5,7 @@
   color: rgb(133, 133, 133);
   font-weight: 500;
   font-size: 11pt;
-  margin-top: 30px;
+  margin-bottom: 30px;
   display: block;
   float: right;
 }
@@ -21,32 +21,33 @@
 }
 
 .titulo-xs {
-  font-size: 25pt;
+  font-size: 20pt;
 }
 
 .logo {
   margin: auto;
-  background-image: url('../../../assets/logo-tcc.png');
+  background-image: url('../../../assets/imagens/logo-tcc.png');
   background-size: cover;
-  width: 250px;
-  height: 200px;
+  width: 200px;
+  height: 150px;
 }
 
 .logo-xs {
-  width: 160px;
-  height: 130px;
+  margin-top: -28px;
+  width: 150px;
+  height: 120px;
 }
 
 .bg-login {
   background-image: url('../../../assets/imagens/login.jpg');
   background-size: cover;
   background-position: center;
-  height: 400px;
+  height: 350px;
   width: 100%;
 }
 
 .bg-login-xs {
-  height: 300px;
+  height: 250px;
 }
 
 .overlay {
@@ -75,7 +76,7 @@
 
 .overlay-xs {
   margin-top: 10px;
-  font-size: 15px;
+  font-size: 13px;
 }
 
 
@@ -86,13 +87,12 @@ mat-form-field {
 }
 
 button {
-  margin-top: 20px;
+  margin: 20px 0px;
   width: 100%;
 }
 
 h1 {
-  margin-top: 40px;
-  margin-bottom: 80px;
+  margin: 30px 0px;
   text-align: center;
   font-size: 40pt;
   color: #565656;
