--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.scss
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.scss
@@ -54,7 +54,7 @@ mat-toolbar {
 
 mat-card {
   background-color: rgb(214, 26, 26);
-  background-image: url('../../../assets/fundo-sidenav.jpg');
+  background-image: url('../../../assets/imagens/fundo-sidenav.jpg');
   background-size: cover;
 }
 
