--- a/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.html
+++ b/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div id="container" fxLayout="column" fxLayoutGap="20px">
-  <div id="container-microarea" fxFlex>
+  <div class="item" fxFlex>
     <h2>Microárea Designada</h2>
 
     <div id="imagem-fundo" [ngStyle.xs]="{ 'height': '250px' }" [ngStyle.sm]="{ 'height': '300px' }">
@@ -8,7 +8,7 @@
         'height': '100%',
         'border-radius': '5px'
       }">
-        <div id="informacoes" [ngStyle.xs]="{ 'margin-right': '50px' }">
+        <div id="informacoes">
           <h2 [ngStyle.xs]="{ 'font-size': '14pt' }" [ngStyle.sm]="{ 'font-size': '16pt' }">
             Microárea {{ informacoesMicroarea.microArea.numero }} - {{ informacoesMicroarea.microArea.bairro.nome }}
           </h2>
@@ -31,6 +31,90 @@
         on
         <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="blank">Unsplash</a>
       </p>
+    </div>
+  </div>
+
+  <div class="item" fxFlex>
+    <h2>Lembretes</h2>
+
+    <mat-list>
+      <h2 matSubheader id="descricao-lista" [ngStyle.xs]="{ 'font-size': '12pt' }">
+        Pacientes que precisam comparecer na UBS
+      </h2>
+
+      <mat-list-item *ngFor="let element of pacienteInfo">
+        <p class="linha" matLine>
+          <span class="nome" [ngStyle.xs]="{ 'font-size': '13pt' }">{{ element.paciente.nome }}</span>
+          <span class="contatos" [ngStyle.xs]="{
+            'float': 'left',
+            'font-size': '10pt',
+            'margin-top': '5px'
+          }" [ngStyle.sm]="{ 'float': 'left' }">
+            {{ retornarContatos(element.paciente) }}
+          </span>
+        </p>
+
+        <p class="linha endereco" mat-line>
+          {{ element?.endereco ? element.endereco : 'Sem endereço'}}
+        </p>
+
+        <button mat-icon-button (click)="abrirModalDoPaciente(element.paciente)">
+          <mat-icon>description</mat-icon>
+        </button>
+      </mat-list-item>
+    </mat-list>
+  </div>
+
+  <div class="item" fxFlex>
+    <h2>Informações Gerais</h2>
+
+    <div id="cards" fxLayout="column" fxLayoutGap="15px">
+      <mat-card class="img-fundo" [ngStyle]="{
+        'background-image': 'url(../../../assets/imagens/pacientes.jpg)'
+      }" fxFlex>
+        <mat-card-header>
+          <mat-card-title>Pacientes</mat-card-title>
+          <mat-card-subtitle>O que há de novo ?</mat-card-subtitle>
+        </mat-card-header>
+
+        <mat-card-actions>
+          <a mat-raised-button [routerLink]="['pacientes']" color="primary">
+            VERIFICAR <mat-icon>person</mat-icon>
+          </a>
+        </mat-card-actions>
+      </mat-card>
+
+      <div fxFlex fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutGap="15px">
+        <mat-card class="img-fundo" [ngStyle]="{
+          'background-image': 'url(../../../assets/imagens/familia.jpg)'
+        }" fxFlex>
+          <mat-card-header>
+            <mat-card-title>Familias</mat-card-title>
+            <mat-card-subtitle>O que há de novo ?</mat-card-subtitle>
+          </mat-card-header>
+
+          <mat-card-actions>
+            <a mat-raised-button [routerLink]="['familias']" color="primary">
+              VERIFICAR <mat-icon>group</mat-icon>
+            </a>
+          </mat-card-actions>
+        </mat-card>
+
+        <mat-card class="img-fundo" [ngStyle]="{
+          'background-image': 'url(../../../assets/imagens/residencias.jpg)'
+        }" fxFlex>
+          <mat-card-header>
+            <mat-card-title>Residências</mat-card-title>
+            <mat-card-subtitle>O que há de novo ?</mat-card-subtitle>
+          </mat-card-header>
+
+          <mat-card-actions>
+            <a mat-raised-button [routerLink]="['residencias']" color="primary">
+              VERIFICAR <mat-icon>house</mat-icon>
+            </a>
+          </mat-card-actions>
+        </mat-card>
+      </div>
     </div>
   </div>
 </div>
