--- a/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.scss
+++ b/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.scss
@@ -4,7 +4,11 @@ h2 {
 }
 
 #container {
-  margin: 100px 56px 10px;
+  margin: 80px 56px 10px;
+}
+
+.item {
+  margin: 20px 0px;
 }
 
 #imagem-fundo {
@@ -20,7 +24,7 @@ h2 {
 
 #informacoes-microarea {
   border-radius: 5px 0px 10px 0px;
-  width: 70%;
+  width: 80%;
   height: 45%;
   background-color: rgba(0, 0, 0, 0.5);
   transition: all 1s;
@@ -75,3 +79,95 @@ h2 {
 #imagem-fundo:hover .overlay {
   opacity: 1;
 }
+
+/* Lista de pacientes */
+
+mat-list {
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+  background-color: #E1E1E1;
+  max-height: 300px;
+  overflow-y: auto;
+  transition: all 1s;
+}
+
+mat-list h2#descricao-lista {
+  font-weight: 500;
+  font-size: 16pt;
+  color: #747474;
+  transition: all 1s;
+}
+
+mat-list-item {
+  margin: 10px 0px;
+  transition: all 1s;
+}
+
+mat-list-item button {
+  margin-left: 10px;
+  transition: all 1s;
+}
+
+mat-list-item p.linha {
+  max-width: 900px;
+  margin: 5px 0px;
+  transition: all 1s;
+}
+
+mat-list-item span.nome {
+  position: relative;
+  float: left;
+  font-weight: 400;
+  font-size: 15pt;
+  margin-right: 10px;
+  transition: all 1s;
+}
+
+mat-list-item span.contatos {
+  position: relative;
+  float: right;
+  color: #747474;
+  transition: all 1s;
+}
+
+mat-list-item p.endereco {
+  color: #747474;
+  width: auto;
+  word-wrap: normal;
+}
+
+/* Informações gerais */
+
+#cards .img-fundo {
+  width: 100%;
+  height: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#cards mat-card-title, mat-card-subtitle {
+  color: white;
+  transition: all 1s;
+  text-shadow: 2px 2px 10px black;
+}
+
+#cards a {
+  width: 50%;
+  opacity: 0;
+  transition: all 1s;
+}
+
+#cards mat-card:hover a {
+  width: 100%;
+  opacity: 1;
+  transition: all 1s;
+}
+
+#cards mat-card-content {
+  transition: all 1s;
+}
+
+/* #cards mat-card:hover mat-card-content {
+  height: 150px;
+} */
