--- a/FrontEnd/mindsafe/src/app/shared/paciente-info-modal/paciente-info-modal.component.html
+++ b/FrontEnd/mindsafe/src/app/shared/paciente-info-modal/paciente-info-modal.component.html
@@ -1,9 +1,11 @@
-<div class="cabecalho">
-  <h1 mat-dialog-title>Informações do Paciente</h1>
-  <button ngClass.xs="button-xs" mat-icon-button (click)="onClose()">
-    <mat-icon class="material-icons" style="color: #565656;">close</mat-icon>
+<div style="display: flex; flex-direction: row;">
+  <h1 matDialogTitle>Informações do Paciente</h1>
+  <span style="flex: 1 1 auto;"></span>
+  <button matTooltip="Fechar a janela" mat-icon-button matDialogClose>
+    <i class="material-icons" style="color: #565656;">close</i>
   </button>
 </div>
+
 <mat-dialog-content>
   <div [ngClass]="{
     'bg-situacao-paciente': true,
