--- a/FrontEnd/mindsafe/src/app/familias/familias/familias.component.html
+++ b/FrontEnd/mindsafe/src/app/familias/familias/familias.component.html
@@ -14,8 +14,8 @@
       <!-- <mat-form-field>
         <input matInput placeholder="Filtro" [type]="tipoCampo" (focus)="disabledFilter()" #filtroTexto>
       </mat-form-field> -->
-      <mat-form-field>
-        <input matInput placeholder="Filtro">
+      <mat-form-field >
+        <input matInput placeholder="Filtro" [type]="tipoCampo" (focus)="disabledFilter()" #filtroTexto>
       </mat-form-field>
 
       <mat-form-field>
@@ -34,27 +34,32 @@
         <!-- <button mat-icon-button (click)="applyFilter(filtroTexto.value, filtroTipo.value.valor)" [disabled]="(filtroTexto.value == '' || filtroTipo.value == null)">
           <mat-icon class="material-icons">search</mat-icon>
         </button> -->
-        <button mat-icon-button>
+        <button mat-icon-button (click)="applyFilter(filtroTexto.value, filtroTipo.value.valor)" [disabled]="(filtroTexto.value == '' || filtroTipo.value == null)">
           <mat-icon class="material-icons">search</mat-icon>
         </button>
-        <!-- <button mat-icon-button (click)="onVerificarAcao('alterar')" [disabled]="selection.selected.length == 0">
-          <mat-icon class="material-icons">edit</mat-icon>
-        </button> -->
-        <button mat-icon-button>
+        <button mat-icon-button (click)="abrirJanelaAlterar('alterar')" [disabled]="selection.selected.length != 1">
           <mat-icon class="material-icons">edit</mat-icon>
         </button>
+
+        <!-- <button mat-icon-button (click)="abrirJanelaAlterar()" [disabled]="selection.selected.length > 0 >
+          <mat-icon class="material-icons">edit</mat-icon>
+        </button> -->
         <!-- <button mat-icon-button (click)="onDelete()" [disabled]="selection.selected.length == 0">
           <mat-icon class="material-icons">delete</mat-icon>
         </button> -->
-        <button mat-icon-button>
+        <button mat-icon-button (click)="removerFamilias()" [disabled]="selection.selected.length != 1">
           <mat-icon class="material-icons">delete</mat-icon>
         </button>
         <!-- <button mat-icon-button (click)="onInfoPaciente()" [disabled]="selection.selected.length != 1">
           <mat-icon class="material-icons">perm_media</mat-icon>
         </button> -->
-        <button mat-icon-button>
+        <button mat-icon-button (click)="abrirJanelaDados()" [disabled]="selection.selected.length != 1">
           <mat-icon class="material-icons">perm_media</mat-icon>
         </button>
+        <!-- <button mat-icon-button (click)="abrirJanelaDados()" [disabled]="selection.selected.length != 0">
+          <mat-icon>
+          class="material-icons">perm_media</mat-icon>
+        </button> -->
         <!-- <button mat-icon-button (click)="onVerificarAcao('add')" [disabled]="selection.selected.length > 0">
           <mat-icon class="material-icons">add</mat-icon>
         </button> -->
