Alterando vizulização das informações de visitas no componente da dashboard

--- a/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.html
+++ b/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
         'height': '100%',
         'border-radius': '5px'
       }">
-        <div id="informacoes">
+        <div id="informacoes" [ngStyle.lg]="{ 'max-width': '500px' }">
           <h2 [ngStyle.xs]="{ 'font-size': '14pt' }" [ngStyle.sm]="{ 'font-size': '16pt' }">
             Microárea {{ informacoesMicroarea.microArea.numero }} - {{ informacoesMicroarea.microArea.bairro.nome }}
           </h2>
