--- a/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.scss
+++ b/FrontEnd/mindsafe/src/app/dashboard/dashboard/dashboard.component.scss
@@ -31,7 +31,7 @@ h2 {
 }
 
 #informacoes {
-  margin: 10px;
+  margin: 10px 0px 0px 20px;
   position: relative;
   float: left;
   max-width: 260px;
@@ -41,7 +41,7 @@ h2 {
 
 #informacoes p {
   font-weight: 400;
-  font-size: 14pt;
+  font-size: 16pt;
   transition: all 1s;
 }
 
