--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes-form-modal/pacientes-form.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes-form-modal/pacientes-form.component.html
@@ -135,7 +135,12 @@
           <mat-form-field fxFlex>
             <mat-select placeholder="Selecionar Riscos" [formControl]="formControlCausas" multiple [(ngModel)]="selectedCausas">
               <mat-option *ngFor="let causa of causas" [value]="causa">
-                {{ causa.nome }}
+                <div style="position: relative;">
+                  <span style="float: left;">{{ causa.nome }}</span>
+                  <span style="float: right;">
+                    <strong>{{ causa.risco }} pontos</strong>
+                  </span>
+                </div>
               </mat-option>
             </mat-select>
           </mat-form-field>
